bin/tests/errors_parser/parser/parser_err_empty_literal_suffix.swg
#global fileprivate

enum A { B = 1' } // swc-expected-error {{parser_err_empty_literal_suffix}}
